@@ -215,6 +215,18 @@
                             </jvmArgs>
                         </launcher>
                         <launcher>
+                            <id>NormalizeDatasets</id>
+                            <mainClass>org.dbpedia.extraction.scripts.NormalizeDatasets</mainClass>
+                            <jvmArgs>
+                                <jvmArg>-server</jvmArg>
+                                <jvmArg>-Xmx64G</jvmArg><!-- processing languages in parallel takes a lot of space -->
+                                <jvmArg>-XX:+HeapDumpOnOutOfMemoryError</jvmArg>
+                                <jvmArg>-XX:+UseConcMarkSweepGC</jvmArg>
+                                <jvmArg>-XX:+PrintGC</jvmArg>
+                                <jvmArg>-XX:+PrintGCTimeStamps</jvmArg>
+                            </jvmArgs>
+                        </launcher>
+                        <launcher>
                             <id>DecodeHtmlText</id>
                             <mainClass>org.dbpedia.extraction.scripts.DecodeHtmlText</mainClass>
                             <jvmArgs>
